src/test/ui/suggestions/missing-lifetime-with-named-lifetime.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/missing-lifetime-with-named-lifetime.rs:2:32
   |
LL | struct S<'a>(&'a dyn Fn(&X) -> &X);
   |                         --     ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say which one of argument 1's 2 lifetimes it is borrowed from
   = note: for more information on higher-ranked polymorphism, visit https://doc.rust-lang.org/nomicon/hrtb.html
help: consider making the bound lifetime-generic with a new `'a` lifetime
   |
LL | struct S<'a>(&'a dyn for<'a> Fn(&'a X) -> &'a X);
   |                      ^^^^^^^    ^^^^^     ^^^
help: consider introducing a named lifetime parameter
   |
LL | struct S<'a>(&'a dyn Fn(&'a X) -> &'a X);
   |                         ^^^^^     ^^^

error[E0106]: missing lifetime specifier
  --> $DIR/missing-lifetime-with-named-lifetime.rs:2:33
   |
LL | struct S<'a>(&'a dyn Fn(&X) -> &X);
   |                         --      ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say which one of argument 1's 2 lifetimes it is borrowed from
   = note: for more information on higher-ranked polymorphism, visit https://doc.rust-lang.org/nomicon/hrtb.html
help: consider making the bound lifetime-generic with a new `'a` lifetime
   |
LL | struct S<'a>(&'a dyn for<'a> Fn(&'a X) -> &X<'a>);
   |                      ^^^^^^^    ^^^^^      ^^^^^
help: consider introducing a named lifetime parameter
   |
LL | struct S<'a>(&'a dyn Fn(&'a X) -> &X<'a>);
   |                         ^^^^^      ^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0106`.
